# MPRD

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
crates/mprd-adapters/: Cargo.toml  README.md
crates/mprd-adapters/src/: circuit_breaker.rs  egress.rs  executors.rs  lib.rs  models_market.rs  nli.rs  proposers.rs  storage.rs
crates/mprd-adapters/src/verified_kernels/executor_circuit_breaker/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-cli/: Cargo.toml  README.md
crates/mprd-cli/proptest-regressions/commands/: markets.txt
crates/mprd-cli/src/: main.rs
crates/mprd-cli/src/commands/: deploy.rs  doctor.rs  fees.rs  init.rs  markets.rs  mod.rs  panel.rs  policy.rs  policy_algebra.rs  policy_test.rs  policy_verify.rs  prove.rs  run.rs  serve.rs  staking.rs  status.rs  tokenomics.rs  verify.rs
crates/mprd-cli/src/commands/serve/: events.rs  http_middleware.rs  incidents_tests.rs  router_tests.rs  status_tests.rs  util.rs
crates/mprd-cli/src/operator/: api.rs  auth.rs  mod.rs  store.rs
crates/mprd-core/: Cargo.toml  README.md  build.rs
crates/mprd-core/proptest-regressions/: state_provenance.txt
crates/mprd-core/proptest-regressions/artifact_repo/: chain.txt  codec.txt  consistency.txt  lookup.txt  mutation.txt
crates/mprd-core/proptest-regressions/policy_algebra/: bdd.txt
crates/mprd-core/src/: anti_replay.rs  components.rs  config.rs  crypto.rs  decision_log.rs  egress.rs  fee_router.rs  hash.rs  lib.rs  limits.rs  ltlf.rs  metrics.rs  mpb.rs  nonce.rs  observability.rs  orchestrator.rs  registry.rs  selectors.rs  state_provenance.rs  tau.rs  tau_net_output_attestation.rs  tau_testnet.rs  validation.rs  wire.rs
crates/mprd-core/src/artifact_repo/: apply.rs  bootstrap.rs  bounds.rs  chain.rs  codec.rs  commit.rs  consistency.rs  diff.rs  error.rs  fetch.rs  lookup.rs  lookup_fetch.rs  mod.rs  mutation.rs  store.rs  types.rs
crates/mprd-core/src/cegis/: mod.rs
crates/mprd-core/src/policy_algebra/: ast.rs  bdd.rs  canon.rs  eval.rs  hash.rs  mod.rs  tau_emit.rs  tau_sbf_parse.rs  trace.rs
crates/mprd-core/src/tokenomics_v6/: actions.rs  auction.rs  bounds.rs  ceo.rs  ceo_lipschitz_ucb.rs  engine.rs  gate.rs  invariant_rail.rs  invariants.rs  kani_proofs.rs  math.rs  menu_graph.rs  mod.rs  objective.rs  pid.rs  safety_controller.rs  simplex_ample_set.rs  simplex_ceo.rs  simplex_planner.rs  simplex_por_oracle.rs  simplex_symmetry_key.rs  types.rs
crates/mprd-core/src/verified_kernels/: kani_harnesses.rs  mod.rs
crates/mprd-core/src/verified_kernels/artifact_commit_consistency_gate/: invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/autopilot_controller/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/bcr_staking/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/decision_token_anti_replay_race/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/decision_token_timestamp_freshness/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/drip_payroll/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/executor_action_preimage_binding/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/executor_circuit_breaker/: command.rs  invariants.rs  mod.rs  state.rs  step.rs  tests.rs  types.rs
crates/mprd-core/src/verified_kernels/fee_distribution/: mod.rs  (+6 more)
crates/mprd-core/tests/: e2e_pipeline.rs  integration_test.rs  tau_testnet_smoke.rs  zero_copy_prototype.rs
crates/mprd-krr/: Cargo.toml
crates/mprd-krr/src/: composition.rs  dag.rs  ddmin.rs  error.rs  explain.rs  lib.rs  tml.rs  trust.rs  types.rs
crates/mprd-perf/: Cargo.toml
crates/mprd-perf/src/: main.rs
crates/mprd-proof/: Cargo.toml  README.md
crates/mprd-proof/benches/: proof_benchmarks.rs
crates/mprd-proof/src/: challenges.rs  integration.rs  lib.rs  merkle.rs  prover.rs  trace.rs  tracing_vm.rs  verifier.rs
crates/mprd-risc0-shared/: Cargo.toml  README.md
crates/mprd-risc0-shared/src/: lib.rs
crates/mprd-zk/: Cargo.toml  README.md
crates/mprd-zk/proptest-regressions/: external_verifier.txt
crates/mprd-zk/src/: abi.rs  artifact_repo_integration.rs  bounded_deser.rs  decentralization.rs  error.rs  external_verifier.rs  lib.rs  manifest.rs  manifest_verifier.rs  modes.rs  modes_v2.rs  mpb_lite.rs  policy_artifacts.rs  policy_fetch.rs  privacy.rs  registry_bound_attestor.rs  registry_state.rs  risc0_host.rs  security.rs  verification.rs
crates/mprd-zk/tests/: binding_failure_pbt_tests.rs  execution_guard_acceptance_tests.rs  external_verifier_gates_tests.rs  mode_integration_tests.rs  robust_mode_tests.rs  tau_interpreter_output_tests.rs
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: anti_replay_state_machine.rs  asde_allocation_v1.rs  asde_voucher_trace_v1.rs  candidate_preimage_v1.rs  decoded_journal_metamorphic_v3.rs  limits_bytes_v1.rs  mpb_artifact_deser.rs  receipt_deser.rs  tau_output_attestation_envelope_v1.rs
methods/: Cargo.toml  README.md  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/mpb_guest/: Cargo.toml
methods/mpb_guest/src/: main.rs
methods/src/: expected_image_ids.rs  lib.rs
methods/tau_compiled_guest/: Cargo.toml
methods/tau_compiled_guest/src/: main.rs
tools/tau-mprd-compiler/: Cargo.toml  README.md
tools/tau-mprd-compiler/proofs/: README.md  verify_kso_v2.py  verify_lss.py
tools/tau-mprd-compiler/src/: ast.rs  ast_v2.rs  bundle_v2.rs  codegen.rs  error.rs  eval_v2.rs  ir.rs  ir_v2.rs  lexer.rs  lexer_v2.rs  lib.rs  limits.rs  main.rs  parser.rs  parser_v2.rs  scrambler_v2.rs  semantic.rs  serialize.rs  serialize_v2.rs
tools/tau-mprd-compiler/tests/: proptest_v2.rs  scrambler_proptest.rs
(+440 files in other folders)
