[package]
name = "mprd-adapters"
version = "0.1.0"
edition = "2021"
description = "Production adapters for MPRD executors, storage, and external integrations"

[dependencies]
mprd-core = { path = "../mprd-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"
