[package]
name = "mprd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
zeroize = "1.7"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
serde_json = "1.0"
url = "2"
async-trait = "0.1"
rayon = "1.10"
rustls = "0.23"
webpki-roots = "0.26"
mprd-mpb = { path = "../mprd-mpb" }

[dev-dependencies]
tracing-subscriber = "0.3"
proptest = "1.4"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
