[package]
name = "mprd-krr"
version = "0.1.0"
edition = "2021"
description = "Knowledge Representation and Reasoning Layer 2 for Tau Net"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

# Optional: parsing
# pest = "2.7"
# pest_derive = "2.7"

[dev-dependencies]
proptest = "1.0"
tempfile = "3"
