[package]
name = "mprd-proof"
version = "0.1.0"
edition = "2021"
description = "Custom proof system for MPB execution - faster than general-purpose zkVMs"

[dependencies]
mprd-core = { path = "../mprd-core" }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "proof_benchmarks"
harness = false
