[package]
name = "mprd-risc0-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types between MPRD Risc0 guest and host"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
bincode = "1.3"
proptest = "1.4"
