[package]
name = "mprd-zk"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge proof integration for MPRD using Risc0"

[dependencies]
mprd-core = { path = "../mprd-core" }
mprd-proof = { path = "../mprd-proof" }
mprd-risc0-methods = { path = "../../methods" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
aes-gcm = "0.10"

# Risc0 dependencies (zkVM backend)
risc0-zkvm = "1.2"
bincode = "1.3"
