[package]
name = "mprd-zk"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge proof integration for MPRD using Risc0"

[dependencies]
mprd-core = { path = "../mprd-core" }
mprd-proof = { path = "../mprd-proof" }
mprd-risc0-methods = { path = "../../methods" }
mprd-risc0-shared = { path = "../mprd-risc0-shared" }
mprd-mpb = { path = "../mprd-mpb" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
aes-gcm = "0.10"
hmac = "0.12"
zeroize = "1.7"
rand = "0.8"
curve25519-dalek = "4.1"

# Risc0 dependencies (zkVM backend)
risc0-zkvm = "1.2"
bincode = "1.3"

[features]
default = []
test-utils = []
fuzz-utils = []

[dev-dependencies]
mprd-generators = { path = "../mprd-generators" }
proptest = "1.4"
