[package]
name = "mprd-risc0-guest"
version = "0.1.0"
edition = "2021"
description = "Risc0 guest program for MPRD decision verification"
autobins = false

[dependencies]
# Risc0 guest library - using 1.2 stable
risc0-zkvm = { version = "1.2", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Hashing  
sha2 = { version = "0.10", default-features = false }

[[bin]]
name = "mprd-guest"
path = "src/main.rs"
test = false
bench = false

[workspace]
