[package]
name = "mprd-risc0-mpb-guest"
version = "0.1.0"
edition = "2021"
description = "Risc0 guest program for MPRD MPB-in-guest decision verification"
autobins = false

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false }
mprd-risc0-shared = { path = "../../crates/mprd-risc0-shared", default-features = false }
mprd-mpb = { path = "../../crates/mprd-mpb" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }

[[bin]]
name = "mprd-mpb-guest"
path = "src/main.rs"
test = false
bench = false

[workspace]

